# celestial-nav

./: .cursorignore  CMakeLists.txt  README.md  error.txt
src/: camera_parameters.h  central_log.cpp  image_acquisition.cpp  image_acquisition.h  location_determination.cpp  location_determination.h  log_limiter.h  main.cpp  preprocessing.cpp  preprocessing.h  star_detection.cpp  star_detection.h  star_matching.cpp  star_matching.h  user_interface.cpp  user_interface.h
